backend/mcsv-db/kubernetes/mcsv-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mcsv-db
  name: mcsv-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mcsv-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/service3it-network: "true"
        io.kompose.service: mcsv-db
    spec:
      containers:
        - args:
            - --default-authentication-plugin=mysql_native_password
            - --character-set-server=utf8
            - --collation-server=utf8_general_ci
          image: mysql:8.0
          name: mcsv-db
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: service3it-data
      restartPolicy: Always
      volumes:
        - name: service3it-data
          persistentVolumeClaim:
            claimName: service3it-data
