backend/mcsv-db/kubernetes/service3it_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: service3it-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/service3it-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/service3it-network: "true"
